--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-
+	<header></header>
+	<div></div>
+	<nav></nav>
 </body>
 </html>
