Added main divisions to the header. total of 2 divisions: the first includes: - name - description the second includes the image

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<header></header>
+	<header>
+		<div class="headerText">
+			<div class="name">Jane Doette</div>
+			<div class="discreption">Front-end ninja</div>
+		</div>
+		<div class="logo"><img src="" alt="udacity Logo"></div>
+	</header>
 	<div></div>
 	<nav></nav>
 </body>
