--- a/portfolio.html
+++ b/portfolio.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initialscale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<header>
-		<div class="headerText">
+		<div class="header_text">
 			<div class="name">Jane Doette</div>
-			<div class="discreption">Front-end ninja</div>
+			<div class="description name">Front-end ninja</div>
 		</div>
-		<div class="logo"><img src="" alt="udacity Logo"></div>
+		<div class="logo"><img src="images/udacity.svg" alt="udacity Logo"></div>
 	</header>
 	<div></div>
 	<nav></nav>
