Added the main image section.

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,12 @@
 <body>
 	<header>
 		<div class="header_text">
-			<div class="name">Jane Doette</div>
+			<div class="name">Faisal Barazi</div>
 			<div class="description name">Front-end ninja</div>
 		</div>
 		<div class="logo"><img src="images/udacity.svg" alt="udacity Logo"></div>
 	</header>
-	<div></div>
+	<div class="main_image"></div>
 	<nav></nav>
 </body>
 </html>
