Removed the "big" container at the bottom

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,28 @@
 <body>
 	<header>
 		<div class="header_text">
-			<div class="name">Faisal Barazi</div>
-			<div class="description name">Front-end ninja</div>
+			<div class="header_name">Faisal Barazi</div>
+			<div class="header_description">Front-end ninja</div>
 		</div>
 		<div class="logo"><img src="images/udacity.svg" alt="udacity Logo"></div>
 	</header>
 	<div class="main_image"></div>
-	<nav></nav>
+	<h1>Featured Work</h1>
+	<div class="work_container">
+		<div class="work_content">
+			<img class="work_image" src="images/CNN.png">
+			<figcaption>Image Classification</figcaption>
+			<div class="work_link"><a href="https://github.com/FaiBarazi/MLND_image-classification.git">Convolutional Neural Network</a></div>
+		</div><div class="work_content">
+			<img class="work_image" src="images/Reinforcement.png">
+			<figcaption>Smart Cab</figcaption>
+			<div class="work_link"><a href="https://github.com/FaiBarazi/MLND_SmartCab.git">Reinforcement Learning</a></div>
+		</div><div class="work_content">
+			<img class="work_image" src="images/Unsupervised.png">
+			<figcaption>Customer Segements</figcaption>
+			<div  class="work_link"><a href=https://github.com/FaiBarazi/MLND_CustomerSegments.git>Reinforcement Learning</a></div>
+		</div>
+	</div>
 </body>
 </html>
+
