Tired of Tracking...

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,17 +18,19 @@
 	<h1>Featured Work</h1>
 	<div class="work_container">
 		<div class="work_content">
-			<img class="work_image" src="images/CNN.png">
-			<figcaption>Image Classification</figcaption>
+			<img class="work_image" src="images/CNN.png" alt=" CNN Image">
+			<p class="work_description">Image Classifier</p>
 			<div class="work_link"><a href="https://github.com/FaiBarazi/MLND_image-classification.git">Convolutional Neural Network</a></div>
-		</div><div class="work_content">
-			<img class="work_image" src="images/Reinforcement.png">
-			<figcaption>Smart Cab</figcaption>
-			<div class="work_link"><a href="https://github.com/FaiBarazi/MLND_SmartCab.git">Reinforcement Learning</a></div>
-		</div><div class="work_content">
-			<img class="work_image" src="images/Unsupervised.png">
-			<figcaption>Customer Segements</figcaption>
-			<div  class="work_link"><a href=https://github.com/FaiBarazi/MLND_CustomerSegments.git>Reinforcement Learning</a></div>
+		</div>
+		<div class="work_content">
+				<img class="work_image" src="images/Reinforcement.png" alt="Reinforcement Image">
+				<p class="work_description">Autonomous Cab</p>
+				<div class="work_link"><a href="https://github.com/FaiBarazi/MLND_SmartCab.git">Reinforcement Learning</a></div>
+		</div>
+		<div class="work_content">
+				<img class="work_image" src="images/Unsupervised.png" alt>
+				<p class="work_description">Customer Segements</p>
+				<div  class="work_link"><a href="https://github.com/FaiBarazi/MLND_CustomerSegments.git">Unsupervised Learning</a></div>
 		</div>
 	</div>
 </body>
